tests/rascal/negative/name_errors/L2/7_undecl-for2.ob
MODULE Bla;
VAR
  x: INTEGER;


BEGIN
  FOR x := y TO 2 DO
    x := 1
  END
END Bla.